# bundle

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  bundle.toml  cliff.toml  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: check.yml  cicd.yml  lint.yml  release.yml
src/: lib.rs  main.rs
src/apply/: merge.rs  mod.rs  overlay.rs
src/bundle/: annotations.rs  build.rs  layer.rs  mod.rs
src/bundlefile/: parser.rs  types.rs
src/cmd/: apply.rs  build.rs  diff.rs  init.rs  inspect.rs  login.rs  mod.rs  pull.rs  push.rs  run.rs  selfupdate.rs  version.rs
src/project/: config.rs  lock.rs  mod.rs
src/registry/: client.rs  mod.rs  semver.rs  types.rs
src/util/: digest.rs  fetch.rs  mod.rs
tests/: apply_integration.rs  build_labels.rs
tests/bundle-file-build/: Bundlefile
tests/common/: mod.rs
