[package]
name = "bundle"
version = "0.1.0"
edition = "2021"
description = "Minecraft server bundle manager via OCI containers"
license = "MIT"

[[bin]]
name = "bundle"
path = "src/main.rs"

[profile.dev]
incremental = true

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # Link Time Optimization
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["rustls", "webpki-roots", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = { version = "0.8", features = ["preserve_order"] }
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1"
oci-client = { version = "0.16", default-features = false, features = ["rustls-tls"] }
oci-spec = { version = "0.9", default-features = false, features = ["image"] }
anyhow = "1"
thiserror = "2.0"
dirs = "6.0"
walkdir = "2"
tempfile = "3"
base64 = "0.22"
http = "1"
rpassword = "7"
futures-util = "0.3"
semver = "1"
git-version = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
